test/typecheck/errors/bad-views1.boa
view subv {
	o: output sum of int;

	o << 0;
}

v := bad/o;